--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mui/icons-material": "^5.11.9",
     "autoprefixer": "^10.4.13",
+    "date-fns": "^2.29.3",
     "hamburger-react": "^2.5.0",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
